--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,5 @@ jobs:
 
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: public
