--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,10 @@ jobs:
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         with:
-          version: 7
-          run_install: false
+          version: 8
+          run_install: |
+            - recursive: true
+            args: --frozen-lockfile
 
       - name: Build
         run: pnpm run
