--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
         with:
           version: 8
           run_install: |
-            - recursive: true
-            args: --frozen-lockfile
+            -recursive: true
+            args: [--frozen-lockfile]
 
       - name: Build
         run: pnpm run
