--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,9 @@ jobs:
         name: Install pnpm
         with:
           version: 8
-          run_install: |
-            -recursive: true
             
       - name: Build
-        run: pnpm run
+        run: pnpm run build
 
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
