--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,19 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+          
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         with:
           version: 8
             
       - name: Build
-        run: pnpm run build
+        run: pnpm run github:build
 
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
