--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           version: 8
             
       - name: Build
-        run: pnpm run build
+        run: pnpm run
 
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
