--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,25 +13,18 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          
-      - name: Install Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16
-          
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        with:
-          version: 8
-            
+          node-version: 18
+          cache: npm
+      - run: npm install --frozen-lockfile
+
       - name: Build
-        run: pnpm run
+        run: npm run github:build
 
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
