--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - run: npm install --frozen-lockfile
 
       - name: Build
-        run: npm run github:build
+        run: npm run build
 
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
