--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "github:build": "tsc && vite build --base /BaseScript-SearchAndDeduplication/",
     "preview": "vite preview"
   },
   "keywords": [],
